<resources>
    <string name="app_name">MOVIE SEARCH</string>
    <string name="delete_all">Delete all</string>
    <string name="upload">upload</string>
    <string name="history_of_search_films">HISTORY OF SEARCH MOVIES:</string>
    <string name="history">HISTORY</string>
    <string name="search">SEARCH</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="movie_id">Movie ID:</string>
    <string name="load">LOAD</string>
    <string name="title">Title:</string>
    <string name="release_date">Release date:</string>
    <string name="budget">Budget:</string>
</resources>